--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "BUILD RESTful APIs with Angela Yu (Udemy)",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^5.11.17"
+    "mongoose": "^5.11.17",
+    "nodemon": "^2.0.7"
   }
 }
